fix: adds width: 100% to full bleed hero with overlay to prevent overlap of content going beyond html container

--- a/components/Sections/FullBleedHero/FullBleedHero.module.scss
+++ b/components/Sections/FullBleedHero/FullBleedHero.module.scss
@@ -283,6 +283,7 @@
       left: 50%;
       transform: translate(-50%, -50%);
       border-radius: 2px;
+      width: 100%;
 
       @include breakpoint-up('sm') {
         padding: 8.05% 7.45%;
